# cookiecutter-meltano-state-backend

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.library_name}}/: pyproject.toml
{{cookiecutter.library_name}}/src/{{cookiecutter.library_name}}/: {{cookiecutter.scheme}}.py
